--- a/front_kalm/my-app/src/components/Footer/footer.module.css
+++ b/front_kalm/my-app/src/components/Footer/footer.module.css
@@ -1,143 +1,144 @@
-.footer{
-    display: grid;
-    height: 200px;
-    background-color: rgba(186, 192, 149, 1);
+.footer {
     width: 100%;
-    overflow-x: hidden;
-}
-.container_footer{
-
-    margin-top: 1rem;
-    gap: 2rem; /* регулируй здесь */
-    height: auto;
     background-color: rgba(186, 192, 149, 1);
-    width: 100%; /* вместо 100rem */
-    padding: 0 2rem; /* немного отступов по бокам */
-    flex-wrap: wrap;
+    border-top: 3px solid rgba(36, 39, 13, 1);
+    padding: 0;
+    margin: 0;
+}
+
+.container_footer {
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: 220px 1.5fr 1fr 1fr 1.5fr;
+    gap: 2.5vw;
+    align-items: start;
+    padding: 0.5vw 2vw 0 1vw;
+    width: 100%;
+    box-sizing: border-box;
+    min-height: 180px;
 }
 
-.list{
-    font-family: "MyFontRegular";
-    list-style: none;
-    padding-left: 0;
-    color: rgba(36, 39, 13, 1);
-    font-size: 12px;
-    margin:0px auto 0px auto;
-    margin-right: 1rem;
-
-    width: auto; /* убери фиксированную ширину */
-    min-width: 10rem; /* при необходимости */
-    margin: 0;
-}
-
-
-.list_1{
-    font-family: "MyFontRegular";
-    list-style: none;
-    padding-left: 0;
-    color: rgba(36, 39, 13, 1);
-    font-size: 12px;
-    margin:0px auto 0px auto;
-    margin-right: 1rem;
-
-    width: auto; /* убери фиксированную ширину */
-    min-width: 10rem; /* при необходимости */
-    margin: 0;
-}
-
-.list_2{
-    font-family: "MyFontRegular";
-    list-style: none;
-    padding-left: 0;
-    color: rgba(36, 39, 13, 1);
-    font-size: 12px;
-    margin:0px auto 0px auto;
-    margin-right: 1rem;
-
-    width: auto; /* убери фиксированную ширину */
-    min-width: 10rem; /* при необходимости */
-    margin: 0;
-}
-
-.list_3{
-    font-family: "MyFontRegular";
-    list-style: none;
-    padding-left: 0;
-    color: rgba(36, 39, 13, 1);
-    font-size: 12px;
-    /* margin:0px auto 0px auto;
-    margin-right: 1rem; */
-    line-height: 150%;
-    
-    width: auto; /* убери фиксированную ширину */
-    min-width: 15rem; /* при необходимости */
-    margin: 0;
-}
-
-.list_4{
-    font-family: "MyFontRegular";
-    list-style: none;
-    padding-left: 0;
-    color: rgba(36, 39, 13, 1);
-    font-size: 12px;
-    margin:0px auto 0px auto;
-    line-height: 150%;
-
-    width: auto; /* убери фиксированную ширину */
-    min-width: 10rem; /* при необходимости */
-    margin: 0;
-    
-}
-
-
-li{
-    margin-top: 14px;
-}
-
-
-h4{
-    font-family: "MyFontRegular";
-    font-weight: bold;
-    color: rgba(36, 39, 13, 1);
-    font-size: 14px;
-    margin:0px auto 0px auto;
-}
-.right_container{
+.logo_block {
     display: flex;
-    margin-top: 0.9rem;
-}
-.left_container{
-    display: grid;
-    margin-right: 4.5rem;
-    margin-left: 2rem;
-
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5vw;
 }
 
-a{
+.baumanLogo {
+    width: 80px;
+    height: 80px;
+}
+
+.kalm_name {
+    font-family: "MyFontBold";
+    font-size: clamp(22px, 2vw, 30px);
+    color: #24270d;
+}
+
+.copy {
+    font-family: "MyFontRegular";
+    color: #24270d;
+    font-size: clamp(10px, 1.1vw, 13px);
+}
+
+.list_1 {
+    font-family: "MyFontRegular";
+    font-size: clamp(16px, 1.3vw, 22px);
+    color: #24270d;
+    line-height: 1.4;
+    margin-top: 0;
+}
+
+h4 {
+    font-family: "MyFontBold";
+    font-size: clamp(18px, 1.5vw, 24px);
+    margin-bottom: 0;
+    margin-top: 0;
+    color: #24270d;
+}
+
+a {
+    font-family: "MyFontRegular";
+    font-size: clamp(16px, 1.3vw, 22px);
+    color: #24270d;
     text-decoration: none;
-    color: rgba(36, 39, 13, 1);
-    font-family: "MyFontRegular";
-}
-.baumanLogo{
-    width: 150px ;
-    height: 150px;
-    margin-left: 0;
-}
-/* .image{
-    width: 1rem;
-    height: 1rem;
-} */
-.copy{
-    font-family: "MyFontRegular";
-    color: rgba(36, 39, 13, 1);
-    font-size: 12px;
-    font-weight: 300;
-    margin-left: 4rem;
+    transition: color 0.3s;
 }
 
-.info{
-    display: flex;
-    margin-left: 2rem;
+a:hover {
+    color: #535725;
+}
+
+.list_1 p {
+    font-family: "MyFontBold";
+    font-size: clamp(8px, 1.5vw, 11px);
+    color: #24270d;
+}
+
+.list_2, .list_3, .list_4 {
+    font-family: "MyFontRegular";
+    font-size: clamp(16px, 1.3vw, 22px);
+    color: #24270d;
+    list-style: none;
+    padding: 0;
+    line-height: 1.4;
+    margin: 0;
+}
+
+.list_2 li, .list_3 li {
+    margin-bottom: 0;
+}
+
+.list_4 p {
+    margin: 0;
+    font-size: clamp(8px, 1.5vw, 15px);
+    color: inherit;
+}
+
+@media (max-width: 1100px) {
+    .container_footer {
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        gap: 1vw;
+        padding: 2vw 1vw 0 1vw;
+    }
+    .baumanLogo {
+        width: 48px;
+        height: 48px;
+    }
+}
+
+@media (max-width: 800px) {
+    .container_footer {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto auto;
+        gap: 2vw;
+    }
+    .logo_block {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .list_1 {
+        grid-column: 2/4;
+        grid-row: 1/2;
+    }
+    .list_2, .list_3, .list_4 {
+        grid-row: 2/3;
+    }
+}
+
+@media (max-width: 600px) {
+    .container_footer {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(3, auto);
+        gap: 2vw;
+        padding: 2vw 2vw 0 2vw;
+    }
+    .logo_block, .list_1, .list_2, .list_3, .list_4 {
+        font-size: 13px;
+    }
+    .baumanLogo {
+        width: 36px;
+        height: 36px;
+    }
 }
