--- a/front_kalm/my-app/src/pages/RestorePassword/restorePage.module.css
+++ b/front_kalm/my-app/src/pages/RestorePassword/restorePage.module.css
@@ -56,7 +56,7 @@
     width: 400px;
     margin-top: 0;
 }
-input::placeholder{
+.input::placeholder{
     padding-left: 1.5rem;
     font-family: "MyFontRegular";
     color: rgba(36, 39, 13, 0.3);
@@ -64,7 +64,7 @@ input::placeholder{
     z-index: 1;
     right: 1.5rem;
 }
-p{
+.p{
     position: relative;
     font-family: "MyFontBold";
     font-size: 14px;
@@ -72,7 +72,7 @@ p{
     color: rgba(36, 39, 13, 1);
     margin:0.8rem auto;
 }
-label{
+.label{
     margin: 0rem auto;
 }
 
