--- a/front_kalm/my-app/src/Modals/LoginModal/LoginModal.module.css
+++ b/front_kalm/my-app/src/Modals/LoginModal/LoginModal.module.css
@@ -51,11 +51,13 @@
   margin: 10px 0 24px 0;
 }
 .forgot_link {
+  cursor: pointer;
   font-family: "MyFontRegular";
   font-size: 16px;
+  font-weight: 800;
   color: #24270d;
   text-decoration: underline;
-  cursor: pointer;
+  text-decoration: none;
 }
 
 .button {
